# Teste_Rag

./: .coverage  .env.example  .gitignore  Dockerfile  README.md  TODO.md  docker-compose.yml  pyproject.toml  pytest.ini
docs/: ARQUITETURA.md  CONTRATOS.md  TESTES.md
scripts/: ingest.py  init_qdrant.py  setup_ollama.sh
src/: main.py
src/api/: routes.py  schemas.py
src/api/v1/: query_api.py
src/clients/: embedding_client.py  retrieval_client.py  vector_store_client.py
src/core/: config.py  embeddings_config.py  types.py  vector_store_config.py
src/ingestion/: chunking.py  document_loader.py
src/prompts/: prompt_rag.py  system_prompt.py
src/prompts/guardrrails/v1/: guardrrails_prompt.py
src/prompts/rag_prompt/V1/: prompt_rag.py
src/prompts/system_prompt/v1/: system_prompt.py
src/providers/: embedding_provider.py  langfuse_provider.py  ollama_embedding_provider.py  qdrant_vector_store_provider.py  vector_store_provider.py
src/services/: guardrrails_service.py  qa_service.py
src/utils/: __init__.py  logger.py  rag_helpers.py  token_counter.py
tests/: test_api.py  test_guardrails.py  test_ollama.py  test_qa_service.py  test_utils.py
